--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -46,7 +46,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -93,7 +92,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            : [
+            "": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -126,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ClientAppBase"
+    }
+  },
+  "defaultProject": "ClientAppBase",
+  "cli": {
+    "analytics": false
+  }
 }
