--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^10.1.5",
     "@angular/platform-browser-dynamic": "^10.1.5",
     "@angular/router": "^10.1.5",
+    "@types/jest": "^26.0.14",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.3",
     "zone.js": "~0.10.3"
